samples/_failures_safe/1761648573_bd4505_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a155aef0.c: In function ‘main’:
./samples/SAFE/__tmp_a155aef0.c:163:12: error: missing terminating " character
  163 |     printf("\nTokens:\n
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_a155aef0.c:163:5: error: expected expression at end of input
  163 |     printf("\nTokens:\n
      |     ^~~~~~
./samples/SAFE/__tmp_a155aef0.c:163:5: error: expected declaration or statement at end of input
